syntax = "proto3";
package authorization;

import "google/protobuf/timestamp.proto";

enum Strategy {
    LIMIT_ORDER = 0;
    COPY_TRADING = 1;
}

enum KeyType {
    ED25519 = 0;
    SECP256K1 = 1;
}

service Authorization {
    rpc Authorize (AuthorizationReq) returns (AuthorizationResp);
    rpc GetAuthorizationRecords (GetAuthRecordsReq) returns (GetAuthRecordsResp);
}

message AuthorizationReq {
  Strategy strategy = 1;
  google.protobuf.Timestamp start_at = 2; 
  google.protobuf.Timestamp end_at = 3; 
  string condition = 4;
  string action = 5;
  bytes sk_ciphertext = 6;
  KeyType key_type = 7;
}

message AuthorizationResp {
  uint64 id = 1; 
}

message AuthorizationRecord {
  uint64 id = 1; 
  Strategy strategy = 2;
  google.protobuf.Timestamp start_at = 3; 
  google.protobuf.Timestamp end_at = 4; 
  string condition = 5;
  string action = 6;
}

message GetAuthRecordsReq {
  uint32 page_num = 1; 
  uint32 page_size = 2; 
  google.protobuf.Timestamp after = 3; 
  google.protobuf.Timestamp before = 4; 
  Strategy strategy = 5;
  string condition = 6;
  string action = 7;
}

message GetAuthRecordsResp {
  repeated AuthorizationRecord records = 1;
}


