syntax = "proto3";
package signing;

import "google/protobuf/timestamp.proto";

service Signing {
    rpc SolanaSign (SolanaSignReq) returns (SolanaSignResp);
}

message SolanaSignReq {
  bytes svc_pub_key = 1;
  bytes versioned_msg = 2;
  string user_addr = 3;
}

message SolanaSignResp {
  bytes versioned_txn = 1;
}